--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Content/reception_detail.css
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Content/reception_detail.css
@@ -1,14 +1,20 @@
 ﻿body {
    color:#2a2a2a;
    font-size:16px;
+   overflow-x:hidden;
+   overflow-y:auto;
+   padding:45px 0 10px 0;
 }
 
 .resource_detail_main {
    width:100%;
-   overflow-x:hidden;
 }
 
 .resource_detail_title {
+   position:fixed;
+   left:0px;
+   top:0px;
+   width:100%;
    background:#698ed5;
    height:45px;
    font-size:20px;
@@ -16,7 +22,7 @@
    color:#FFFFFF;
    text-align:left;
    padding-left:20px;
-   margin:0 -15px;
+   z-index:999;
 }
 
 .back {
