--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Content/reception_detail.css
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Content/reception_detail.css
@@ -1,9 +1,10 @@
-﻿body {
+﻿html,body {
    color:#2a2a2a;
    font-size:16px;
    overflow-x:hidden;
    overflow-y:auto;
    padding:45px 0 10px 0;
+   background-color:#fff;
 }
 
 .resource_detail_main {
