完成项目搜索

--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Views/Reception/ResourceDetail.cshtml
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Views/Reception/ResourceDetail.cshtml
@@ -50,13 +50,14 @@
                             <thead>
                                 <tr>
                                     <th>时间</th>
+                                    <th>接待人员</th>
                                     <th>大事件</th>
                                     <th>内容</th>
                                 </tr>
                             </thead>
                             <tbody id="eventlist">
                                 <tr id="no_data" style="display:none;">
-                                    <td colspan="3" style="text-align:center;">暂无数据</td>
+                                    <td colspan="4" style="text-align:center;">暂无数据</td>
                                 </tr>                  
                             </tbody>
                         </table>
