更改资源弹出框

--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Views/Reception/Index.cshtml
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Views/Reception/Index.cshtml
@@ -33,7 +33,7 @@
             </div>
             <input type="text" class="form-control" id="searchName" aria-label="..." placeholder="请输入搜索关键词" style="height:34px;">
             <span class="input-group-btn">
-                <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
+                <button id="search" class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
             </span>
         </div>
     </div>
